# Lucet version 0.1.1

[workspace]
members = [
  "lucet-analyze",
  "lucet-idl",
  "lucet-idl/lucet-idl-test",
  "lucet-idl/lucet-idl-test/resources/rust_host",
  "lucet-module-wasmsbx",
  "lucet-runtime-wasmsbx",
  "lucet-runtime-wasmsbx/lucet-runtime-internals-wasmsbx",
  "lucet-runtime-wasmsbx/lucet-runtime-tests",
  "lucet-spectest",
  "lucet-wasi-wasmsbx",
  "lucet-wasi-fuzz",
  "lucet-wasi-sdk",
  "lucetc",
  "sightglass",
  "benchmarks/lucet-benchmarks",
]
exclude = ["cranelift"]

[profile.test]
rpath = true
