[package]
name = "lucet-spectest"
version = "0.1.1"
description = "Test harness to run WebAssembly spec tests (.wast) against the Lucet toolchain"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
authors = ["Lucet team <lucet@fastly.com>"]
categories = ["wasm"]
edition = "2018"

[lib]
crate-type=["rlib"]

[[bin]]
name = "spec-test"
path = "src/main.rs"

[dependencies]
lucetc = { path = "../lucetc", version = "0.1.1" }
lucet-module-wasmsbx = { path = "../lucet-module-wasmsbx", version = "0.1.1" }
lucet-runtime-wasmsbx = { path = "../lucet-runtime-wasmsbx", version = "0.1.1" }
wabt = "0.7"
serde = "1.0"
serde_json = "1.0"
failure = "0.1"
clap="2.32"
tempfile = "3.0"
target-lexicon = "0.8.1"
