[package]
name = "lucet-benchmarks"
version = "0.1.1"
description = "Benchmarks for the Lucet runtime"
homepage = "https://github.com/fastly/lucet"
repository = "https://github.com/fastly/lucet"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
authors = ["Lucet team <lucet@fastly.com>"]
edition = "2018"

[dependencies]
criterion = "0.2"
lucetc = { path = "../../lucetc" }
lucet-module-wasmsbx = { path = "../../lucet-module-wasmsbx" }
lucet-runtime-wasmsbx = { path = "../../lucet-runtime-wasmsbx" }
lucet-runtime-internals-wasmsbx = { path = "../../lucet-runtime-wasmsbx/lucet-runtime-internals-wasmsbx" }
lucet-wasi-wasmsbx = { path = "../../lucet-wasi-wasmsbx" }
lucet-wasi-sdk = { path = "../../lucet-wasi-sdk" }
nix = "0.13"
num_cpus = "1.0"
rayon = "1.0"
tempfile = "3.0"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
