[package]
name = "lucet-idl-test-rust-host"
version = "0.1.0"
authors = ["Pat Hickey <phickey@fastly.com>"]
edition = "2018"

[[bin]]
name = "lucet-idl-test-rust-host"
path = "src/main.rs"

[dependencies]
lucet-idl = { path = "../../../" }
lucet-runtime-wasmsbx = { path = "../../../../lucet-runtime-wasmsbx" }
lucet-wasi-wasmsbx = { path = "../../../../lucet-wasi-wasmsbx" }
failure = "0.1"
log = "0.4"
env_logger = "0.6"
